# Friday13

./: CLAUDE.md  MANIFEST.in  README.md  README_PACKAGE.md  dagen.py  find_repeat.py  find_repeat_test.py  leapeat.py  pattern.py  setup.cfg  setup.py  tally.py  turf  weekday.py
find_repeat/: __init__.py  find_repeat.py
find_repeat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_find_repeat.py
