[metadata]
name = find_repeat
version = attr: find_repeat.__version__
license = MIT
description = A utility for finding repeating patterns in sequences
long_description = file: README_PACKAGE.md
long_description_content_type = text/markdown
author = Erik Meinders
author_email = erik@easytouch.nl
url = https://github.com/ErikMeinders/Friday13
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find_packages
python_requires = >=3.6